<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:background="#fff"
android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="3dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/logo2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="@string/app_desc"/>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#F0F0F0">
    </View>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/banner2"
        android:adjustViewBounds="true"
        android:layout_marginTop="8dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/qa"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/app_qaa"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/book"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/app_book" />
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/job"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/app_job" />
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@drawable/offer"
            android:textSize="15sp"
            android:text="@string/app_offer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/app_book_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="160dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/app_book_desc"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
